--- a/CodeBootcamp/SudokuCanvas.html
+++ b/CodeBootcamp/SudokuCanvas.html
@@ -3,6 +3,8 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <style>
+import React, { Component } from 'react';
+
 canvas {
     //border:2px solid #000000; // #d3d3d3
     background-color: 'white' //#f1f1f1;
@@ -263,34 +265,68 @@ function onkoJoNumeroa (cursorPosxx, cursorPosyy,arvo) {
 	return loytyi;
 }
 
-// latPpeli() lataa tällä hetkellä vain yhden pelin.
+// latPeli() lataa tällä hetkellä vain yhden pelin.
 // Tavoite on, että pelejä voisi ladata tietokannasta.
 function lataaPeli() {
-
-taulu = [
-	[0,4,0,5,6,0,0,9,0],
-	[0,7,0,1,9,0,0,0,6],
-	[9,0,0,0,2,7,0,0,1],
-	[0,2,0,0,0,8,1,0,0],
-	[1,8,0,0,0,0,0,2,9],
-	[0,0,7,2,0,0,0,3,0],
-	[4,0,0,9,8,0,0,0,7],
-	[6,0,0,0,3,1,0,4,0],
-	[0,0,0,0,5,6,0,1,0]
-];
-
-for (var i = 0; i < 9; i++) {
-	for (var j = 0; j < 9; j++) {
-		tyhjennaRuutu(i+1,j+1);
-		if (taulu[i][j] > 0) {
-			kirjoitaArvoRuutuun(i+1,j+1,taulu[i][j]);
+	
+	var url = 'https://localhost:44316/Home/About';
+	var xhr = createCORSRequest('GET', url);
+	
+	xhr.onload = function() {
+		var text = xhr.responseText;
+		var title = getTitle(text);
+		
+		// jaetaan merkkijono osiin merkistä ','  {x;x;x;x},{x;x;x;x},{x;x;x;x}
+		var res = title.split(','); // taulukko res
+		// käy läpi kaikki {x;x;x;x}
+		for (var i = 0; i < res.length; i++) {
+			// poistetaan { ja }
+			res[i] = res[i].substr(1, res[i].length-2)
+			// jaetaan merkkijono osiin merkistä ';'
+			var res2 = res[i].split(';');
+			// siirretään arvot muuttujaan taulu
+			taulu[res2[1]][res2[2]] = res2[3];
 		}
-	}
-}
-
+		
+		for (var ii = 0; ii < 9; ii++) {
+			for (var j = 0; j < 9; j++) {
+				tyhjennaRuutu(ii+1,j+1);
+				if (taulu[ii][j] > 0) {
+					kirjoitaArvoRuutuun(ii+1,j+1,taulu[ii][j]);
+				}
+			}
+		}
+		
+	};
+  
+	xhr.send();
+console.log(xhr);
 	return;
 }
 
+
+// Create the XHR object.
+function createCORSRequest(method, url) {
+  var xhr = new XMLHttpRequest();
+  if ("withCredentials" in xhr) {
+    // XHR for Chrome/Firefox/Opera/Safari.
+    xhr.open(method, url, true);
+  } else if (typeof XDomainRequest != "undefined") {
+    // XDomainRequest for IE.
+    xhr = new XDomainRequest();
+    xhr.open(method, url);
+  } else {
+    // CORS not supported.
+	console.log("CORS not supported");
+	alert("CORS not supported");
+    xhr = null;
+  }
+  return xhr;
+}
+
+function getTitle(text) {
+  return text.match('<h4>(.*)?</h4>')[1];
+}
 
     </script>
 	
